# haskell-book

./: LICENSE  README.md
ch-01/: README.md
ch-02/: FunctionWithWhere.hs  exercises.md  hello.hs
ch-03/: exercises.hs  exercises.md  print2.hs  print3broken.hs
ch-04/: exercises.hs  exercises.md  moods.hs
ch-05/: exercises.md
ch-06/: day-of-week.hs  day-of-week2.hs  eq-instances.hs  exercises.hs  exercises.md  trivial.hs
ch-07/: arith4.hs  exercises.hs  exercises.md  registeredUser.hs
ch-08/: exercises.hs  exercises.md  wordNumber.hs
ch-09/: cipher.hs  exercises.hs  exercises.md  poem-lines.hs
ch-10/: db-processing.hs  exercises.md  readme.md
ch-11/: binary-tree.hs  ciphers-andrew.hs  ciphers-uli.hs  ciphers.hs  exercises.hs  exercises.md  phone-andrew.hs  phone-patrick.hs  phone-uli.hs  phone.hs  programmers.hs  toomany.hs  vehicles.hs  vehicles2.hs
ch-12/: binary-tree.hs  either-lib.hs  exercises.md  maybe-lib.hs  only-natural.hs  string-processing.hs  unfolds.hs  validate-word.hs
ch-13/: cipher-input.hs  exercises.md  palindrome-input.hs  person.hs
ch-13/hangman/: hangman.cabal
ch-13/hangman/src/: Main.hs
ch-14/: WordNumberTest.hs  exercises.md
ch-14/hangman/: hangman.cabal
ch-14/hangman/data/: dict.txt
ch-14/hangman/src/: Hangman.hs  Main.hs
ch-14/hangman/test/: Spec.hs
ch-14/hspec-addition/: Addition.hs  addition.cabal
ch-14/morse/: ChangeLog.md  README.md  morse.cabal
ch-14/morse/src/: Main.hs  Morse.hs
ch-14/morse/test/: tests.hs
ch-14/recursive-summation/: RecursiveSummation.hs  recursive-summation.cabal
ch-14/using-quickcheck/: UsingQuickCheck.hs  qch.cabal
ch-14/word-number/: ChangeLog.md  README.md  package.yaml  word-number.cabal
ch-14/word-number/app/: Main.hs
ch-14/word-number/test/: Spec.hs
ch-15/: exercises.hs  exercises.md  optional.hs
ch-15/orphan-instances/: Listy.hs  ListyInstances.hs
ch-15/testing-qch-patience/: ChangeLog.md  README.md  package.yaml  testing-qch-patience.cabal
ch-15/testing-qch-patience/test/: Spec.hs
ch-16/: exercises.hs  exercises.md
ch-16/exercises/: exercises.cabal
ch-16/exercises/src/: Main.hs
ch-17/: exercises.hs  exercises.md
ch-17/exercises/src/: Main.hs
ch-18/: exercises.hs  exercises.md
ch-18/exercises/src/: Main.hs
ch-19/shawty/: shawty.cabal
ch-19/shawty/src/: Main.hs
ch-20/: exercises.hs  exercises.md
ch-21/: exercises.hs  stack.yaml
ch-21/exercises/: exercises.cabal
ch-21/exercises/src/: Main.hs
ch-22/: exercises.hs  reader-practice.hs
ch-22/shawty2/: README.md  shawty2.cabal  stack.yaml
ch-22/shawty2/src/: Main.hs
chapter-02/: HealTheSick.hs  exercises.hs
chapter-03/: README.md  TopOrLocal.hs  exercises.hs  print1.hs  print2.hs  print3.hs  print3flipped.hs  reverse.hs
chapter-04/: exercises.hs
