name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            joan
license:             BSD3
license-file:        LICENSE
author:              Joan Llenas
maintainer:          joanllenas.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
