name:                shawty
version:             0.1.0.0
synopsis:            URI shortener
-- description:
homepage:            https://github.com/githubuser/shawty#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:  base >= 4.7 && < 5
                  , bytestring
                  , hedis
                  , mtl
                  , network-uri
                  , random
                  , scotty
                  , semigroups
                  , text
                  , transformers