name:                shawty2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shawty2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable shawty2
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
